Bug 80662 - RTL: The update number of the java version number in Options dialog is on the wrong side
Summary: RTL: The update number of the java version number in Options dialog is on the...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.3.0.1 rc
Hardware: Other All
: low minor
Assignee: Hossein
URL:
Whiteboard: target:26.2.0 target:25.8.0.2
Keywords:
Depends on:
Blocks: Java-Runtime-JRE RTL-UI
  Show dependency treegraph
 
Reported: 2014-06-29 06:34 UTC by Yousuf Philips (jay) (retired)
Modified: 2025-07-18 19:06 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
how the java version numbers to in RTL (60.84 KB, image/png)
2014-06-29 06:34 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2014-06-29 06:34:39 UTC
Created attachment 101959 [details]
how the java version numbers to in RTL

When i open Tools > Options > LibreOffice > Advanced in the arabic UI, java versions look like this '51_1.7.0', while in the english UI it looks like '1.7.0_51'. I think the easiest solution is to convert '_' to '-'.
Comment 1 Firas Hanife 2014-06-30 13:25:56 UTC
Confirming here on openSUSE 13.1 with 4.3.0.1
Comment 2 QA Administrators 2015-10-14 19:56:11 UTC Comment hidden (obsolete)
Comment 3 Yousuf Philips (jay) (retired) 2017-10-02 09:35:43 UTC
Still present.

Version: 5.4.3.0.0+
Build ID: fb64cf127dc6398f5d18d186a93966837db0bb1e
CPU threads: 2; OS: Linux 4.4; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:libreoffice-5-4, Time: 2017-09-27_12:54:32
Locale: en-US (en_US.UTF-8); Calc: group
Comment 4 Omer Zak 2017-11-04 20:26:46 UTC
Still happens in:

Version: 5.4.2.2.0+
Build ID: 1:5.4.2-3~bpo9+1
CPU threads: 8; OS: Linux 4.9; UI render: default; VCL: gtk2; 
Locale: en-US (en_US.utf8); Calc: group

OS: Debian 64bit Stretch (Debian 9.2, with some backported packages)

I tested using Hebrew UI.
Comment 5 QA Administrators 2018-11-05 03:43:54 UTC Comment hidden (obsolete)
Comment 6 Buovjaga 2020-11-18 14:11:25 UTC
Still confirmed with SAL_RTL_ENABLED=1

Arch Linux 64-bit
Version: 7.1.0.0.alpha1+
Build ID: bd3aeaefff5e7bdef10c4702d1f388083557614e
CPU threads: 8; OS: Linux 5.9; UI render: default; VCL: kf5
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 15 November 2020
Comment 7 QA Administrators 2022-11-19 03:35:58 UTC Comment hidden (obsolete)
Comment 8 QA Administrators 2024-11-19 03:16:07 UTC Comment hidden (obsolete)
Comment 9 Commit Notification 2025-07-14 20:30:07 UTC
Hossein committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1a2523aa52c8237f784b4fe2d4689cbf7a02aed2

tdf#80662 Fix display of JDK version number / path

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2025-07-18 19:06:06 UTC
Hossein committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/c6350e9d8ef5eae111bd5d841ca7110d59e975a3

tdf#80662 Fix display of JDK version number / path

It will be available in 25.8.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.